reworked makefiles, README additions

--- a/trunk/src/Makefile
+++ b/trunk/src/Makefile
@@ -1,18 +1,24 @@
 TOPDIR = ..
 include $(TOPDIR)/config.mk
+include $(TOPDIR)/package.mk
 
-CFLAGS += -I../include -isystem $(KERNEL_HEADERS) -D_GNU_SOURCE -std=gnu99
+CFLAGS += -isystem $(KERNEL_HEADERS) -D_GNU_SOURCE -std=gnu99
 CFLAGS += -W -Wall -Wmissing-prototypes -Wwrite-strings -Wcast-qual -Wfloat-equal -Wshadow -Wpointer-arith -Wbad-function-cast -Wsign-compare -Waggregate-return -Wmissing-declarations -Wmissing-noreturn -Wmissing-format-attribute -Wredundant-decls -Wnested-externs -Winline -Wdisabled-optimization -Wno-long-long -Wstrict-prototypes -Wundef -pedantic -Werror
 
-all: jammod test.o
+all: jammod test.ko
 
 clean:
-	rm -f jammod *.o
+	rm -f jammod *.o *.ko
+
+install: all
+	install -d -m 0755 $(DESTDIR)$(PREFIX)/sbin
+	install -m 0755 jammod $(DESTDIR)$(PREFIX)/sbin
 
 jammod: main.c symbols.c loadfile.c linker.c kmem.c kmalloc.c module.c
+	test -f $(KERNEL_HEADERS)/linux/version.h
 	$(CC) $(CFLAGS) -o $@ $^
 
-test.o: test.c
+test.ko: test.c
 	$(CC) -c $(CFLAGS) -DMODULE -D__KERNEL__ -o $@ $^
 	strip --strip-debug $@
 
