--- a/trunk/samples/Makefile
+++ b/trunk/samples/Makefile
@@ -4,16 +4,20 @@ include $(TOPDIR)/package.mk
 
 CFLAGS += -isystem $(KERNEL_HEADERS) -D_GNU_SOURCE -std=gnu99
 CFLAGS += -W -Wall -Wmissing-prototypes -Wwrite-strings -Wcast-qual -Wfloat-equal -Wshadow -Wpointer-arith -Wbad-function-cast -Wsign-compare -Waggregate-return -Wmissing-declarations -Wmissing-noreturn -Wmissing-format-attribute -Wredundant-decls -Wnested-externs -Winline -Wdisabled-optimization -Wno-long-long -Wstrict-prototypes -Wundef -pedantic -Werror
+CFLAGS += -DMODULE -D__KERNEL__
 
-all: jammod
+all: test.ko
 
 clean:
-	rm -f jammod
+	rm -f *.o *.ko
 
-install: all
-	install -d -m 0755 $(DESTDIR)$(PREFIX)/sbin
-	install -m 0755 jammod $(DESTDIR)$(PREFIX)/sbin
+install:
 
-jammod: main.c symbols.c loadfile.c linker.c kmem.c kmalloc.c module.c
+test.ko: test.c
 	test -f $(KERNEL_HEADERS)/linux/version.h
-	$(CC) $(CFLAGS) -o $@ $^
+	$(CC) -c $(CFLAGS) -o $@ $^
+	strip --strip-debug $@
+
+test.S: test.c
+	test -f $(KERNEL_HEADERS)/linux/version.h
+	$(CC) -S -c $(CFLAGS) -o $@ $^
