--- a/trunk/samples/Makefile
+++ b/trunk/samples/Makefile
@@ -6,18 +6,18 @@ CFLAGS += -isystem $(KERNEL_HEADERS) -D_GNU_SOURCE -std=gnu99
 CFLAGS += -W -Wall -Wmissing-prototypes -Wwrite-strings -Wcast-qual -Wfloat-equal -Wshadow -Wpointer-arith -Wbad-function-cast -Wsign-compare -Waggregate-return -Wmissing-declarations -Wmissing-noreturn -Wmissing-format-attribute -Wredundant-decls -Wnested-externs -Winline -Wdisabled-optimization -Wno-long-long -Wstrict-prototypes -Wundef -pedantic
 CFLAGS += -DMODULE -D__KERNEL__
 
-all: test.ko
+all: test.ko param.ko
 
 clean:
-	rm -f *.o *.ko
+	rm -f *.ko
 
 install:
 
-test.ko: test.c
+%.ko: %.c
 	test -f $(KERNEL_HEADERS)/linux/version.h
 	$(CC) -c $(CFLAGS) -o $@ $^
 	strip --strip-debug $@
 
-test.S: test.c
+%.S: %.c
 	test -f $(KERNEL_HEADERS)/linux/version.h
 	$(CC) -S -c $(CFLAGS) -o $@ $^
